hphp/hack/test/typecheck/perf/chain_of_generic_bounds.php.constraint_method_call.exp
ERROR: File "chain_of_generic_bounds.php", line 7, characters 5-6:
This generic parameter is redundant because it only appears in a covariant (output) position. Consider replacing uses of generic parameter with `nothing` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
