hphp/hack/test/typecheck/perf/chain_of_generic_bounds.php
<?hh

abstract class C {
  abstract const type T;

  public function nasty<
    T1,
    T2,
    T3,
    T4,
    T5,
    T6,
    T7,
    T8,
    T9,
    T10,
    T11,
    T12,
    T13,
    T14,
    T15,
    T16,
    T17,
    T18,
  >(this::T $x): T18
  where
    T2 super T1,
    T3 super T1,
    T4 super T1,
    T5 super T1,
    T6 super T1,
    T7 super T1,
    T8 super T1,
    T9 super T1,
    T10 super T1,
    T11 super T1,
    T12 super T1,
    T13 super T1,
    T14 super T1,
    T15 super T1,
    T16 super T1,
    T17 super T1,
    T18 super T1,
    T3 super T2,
    T4 super T2,
    T5 super T2,
    T6 super T2,
    T7 super T2,
    T8 super T2,
    T9 super T2,
    T10 super T2,
    T11 super T2,
    T12 super T2,
    T13 super T2,
    T14 super T2,
    T15 super T2,
    T16 super T2,
    T17 super T2,
    T18 super T2,
    T4 super T3,
    T5 super T3,
    T6 super T3,
    T7 super T3,
    T8 super T3,
    T9 super T3,
    T10 super T3,
    T11 super T3,
    T12 super T3,
    T13 super T3,
    T14 super T3,
    T15 super T3,
    T16 super T3,
    T17 super T3,
    T18 super T3,
    T5 super T4,
    T6 super T4,
    T7 super T4,
    T8 super T4,
    T9 super T4,
    T10 super T4,
    T11 super T4,
    T12 super T4,
    T13 super T4,
    T14 super T4,
    T15 super T4,
    T16 super T4,
    T17 super T4,
    T18 super T4,
    T6 super T5,
    T7 super T5,
    T8 super T5,
    T9 super T5,
    T10 super T5,
    T11 super T5,
    T12 super T5,
    T13 super T5,
    T14 super T5,
    T15 super T5,
    T16 super T5,
    T17 super T5,
    T18 super T5,
    T7 super T6,
    T8 super T6,
    T9 super T6,
    T10 super T6,
    T11 super T6,
    T12 super T6,
    T13 super T6,
    T14 super T6,
    T15 super T6,
    T16 super T6,
    T17 super T6,
    T18 super T6,
    T8 super T7,
    T9 super T7,
    T10 super T7,
    T11 super T7,
    T12 super T7,
    T13 super T7,
    T14 super T7,
    T15 super T7,
    T16 super T7,
    T17 super T7,
    T18 super T7,
    T9 super T8,
    T10 super T8,
    T11 super T8,
    T12 super T8,
    T13 super T8,
    T14 super T8,
    T15 super T8,
    T16 super T8,
    T17 super T8,
    T18 super T8,
    T10 super T9,
    T11 super T9,
    T12 super T9,
    T13 super T9,
    T14 super T9,
    T15 super T9,
    T16 super T9,
    T17 super T9,
    T18 super T9,
    T11 super T10,
    T12 super T10,
    T13 super T10,
    T14 super T10,
    T15 super T10,
    T16 super T10,
    T17 super T10,
    T18 super T10,
    T12 super T11,
    T13 super T11,
    T14 super T11,
    T15 super T11,
    T16 super T11,
    T17 super T11,
    T18 super T11,
    T13 super T12,
    T14 super T12,
    T15 super T12,
    T16 super T12,
    T17 super T12,
    T18 super T12,
    T14 super T13,
    T15 super T13,
    T16 super T13,
    T17 super T13,
    T18 super T13,
    T15 super T14,
    T16 super T14,
    T17 super T14,
    T18 super T14,
    T16 super T15,
    T17 super T15,
    T18 super T15,
    T17 super T16,
    T18 super T16,
    T18 super T17,
    T18 super this::T {
    return $x;
  }
}
